# HouseExample

./: CMakeLists.txt  HouseBuilder.h  class_diagram.puml  main.cpp
factories/: IFactory.h  RoomFactory.h  StoreyFactory.h
factories/foundation_factories/: FoundationFactory.h  GirderFoundationFactory.h  PiledFoundationFactory.h
factories/roof_factories/: RoofFactory.h  SimpleRoofFactory.h  TerraceRoofFactory.h
models/: House.h  MaterialType.h
models/foundation/: Foundation.h  GirderFoundation.h  PiledFoundation.h
models/roof/: Roof.h  SimpleRoof.h  TerraceRoof.h
models/room/: Room.h
models/storey/: Storey.h
